# youtube-music-account-migrator

./: .gitignore  LICENSE  README.md  pyproject.toml
youtube_music_account_migrator/: ytma.py
